--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
+  <p> click on inspect then console to see the result </p>
 </body>
 </html>
